--- a/app/src/main/assets/map.html
+++ b/app/src/main/assets/map.html
@@ -3,9 +3,9 @@
 	<head>
 		<title>Eng Software</title>
 	    <meta charset="utf-8"/>
-	    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-	    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+		<script src="jquery.js"></script>
+		<script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+		<link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.css">
 	</head>
 	<body style="font-size:16px;">
 		<nav class="navbar navbar-default navbar-static-top" style="background-color:orange;">
@@ -15,8 +15,8 @@
 			    </div>
 			    	<ul class="nav navbar-nav">
 				      	<li class="active"><a href="map.html">Home</a></li>
-				      	<li style="float:right;"><a href="index.html">Sair</a></li> 
-			    	</ul>
+						<li style="position:absolute; right:10px;"><a href="index.html">Sair</a></li>
+					</ul>
 			  	</div>
 			 </div>
 		</nav>
