--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -4,8 +4,8 @@
 	<title>Eng Software</title>
 	<meta charset="utf-8"/>
 	<script src="jquery.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+	<link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.css">
 </head>
 <body style="font-size:16px;">
 <nav class="navbar navbar-default navbar-static-top" style="background-color:orange;">
