--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Eng Software</title>
-	<meta charset="utf-8"/>
-	<script src="jquery.js"></script>
-	<script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
-	<link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.css">
-</head>
-<body style="font-size:16px;">
-<nav class="navbar navbar-default navbar-static-top" style="background-color:orange;">
-	<div class="container-fluid">
-		<div class="navbar-header">
-			<a class="navbar-brand" href="index.html">Engenharia de Software</a>
+	<head>
+		<title>Eng Software</title>
+		<meta charset="utf-8"/>
+		<script src="jquery.js"></script>
+		<script src="bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+		<link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.css">
+	</head>
+	<body style="font-size:16px;">
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="map.html">Engenharia de Software</a>
+				</div>
+			</div>
+		</nav>
+		<div class="container" style="height:calc(100vh - 50px);">
+			<h1 style="text-align:center; margin:50px;">Trabalho de Engenharia de Software</h1>
+			<div>
+				<h2>Login</h2>
+				<input class="form-control input-lg" type="text" id="login">
+				<h2>Senha</h2>
+				<input class="form-control input-lg" type="password" id="senha">
+				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="submitLogin()" style="margin-top: 30px;">Entrar</button>
+			</div>
 		</div>
-	</div>
-</nav>
-<div class="container" style="height:calc(100vh - 50px);">
-	<h1 style="text-align:center; margin:50px;">Trabalho de Engenharia de Software</h1>
-	<div>
-		<h2>Login</h2>
-		<input class="form-control input-lg" type="text" id="login">
-		<h2>Senha</h2>
-		<input class="form-control input-lg" type="password" id="senha">
-		<button class="btn btn-primary btn-lg btn-block" type="button" onclick="submitLogin()" style="margin-top: 30px;">Entrar</button>
-	</div>
-</div>
-</body>
-<script type="text/javascript">
-		var submitLogin = function(){
-			if((document.getElementById('login').value == 'admin') && (document.getElementById('senha').value == 'admin')){
-				$( location ).attr("href", "map.html");
-			} else {
-				alert("Login ou senha inválido!");
+	</body>
+	<script type="text/javascript">
+			var submitLogin = function(){
+				if((document.getElementById('login').value == 'admin') && (document.getElementById('senha').value == 'admin')){
+					$( location ).attr("href", "map.html");
+				} else {
+					alert("Login ou senha inválido!");
+				}
 			}
-		}
-</script>
+	</script>
 </html>
