--- a/app/src/main/assets/map.html
+++ b/app/src/main/assets/map.html
@@ -8,17 +8,26 @@
 		<link rel="stylesheet" href="bootstrap-3.3.7-dist\css\bootstrap.css">
 	</head>
 	<body style="font-size:16px;">
-		<nav class="navbar navbar-default navbar-static-top" style="background-color:orange;">
-			 <div class="container-fluid">
-			 	<div class="navbar-header">
-			      	<a class="navbar-brand" href="map.html">Engenharia de Software</a>
-			    </div>
-			    	<ul class="nav navbar-nav">
-				      	<li class="active"><a href="map.html">Home</a></li>
-						<li style="position:absolute; right:10px;"><a href="index.html">Sair</a></li>
+		<nav class="navbar navbar-default navbar-static-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="map.html">Engenharia de Software</a>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="map.html">Home<span class="sr-only">(current)</span></a></li>
 					</ul>
-			  	</div>
-			 </div>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="index.html">Sair</a></li>
+					</ul>
+				</div>
+			</div>
 		</nav>
 		<div id="map" style="width:500px: height:400px;">
 		</div>
