página inicial com logo

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -16,7 +16,8 @@
 			</div>
 		</nav>
 		<div class="container" style="height:calc(100vh - 50px);">
-			<h1 style="text-align:center; margin:50px;">Trabalho de Engenharia de Software</h1>
+			<img src="sacolas.jpg" class="img-responsive" alt="compras" >
+			<h3 style="text-align:center; margin:50px;">Grupo de Compras</h3>
 			<div>
 				<h2>Login</h2>
 				<input class="form-control input-lg" type="text" id="login">
