--- a/app/src/main/assets/map.html
+++ b/app/src/main/assets/map.html
@@ -23,6 +23,9 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="map.html">Home<span class="sr-only">(current)</span></a></li>
 					</ul>
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="ListaDeCompras.html">Cadastra Lista<span class="sr-only">(current)</span></a></li>
+					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html">Sair</a></li>
 					</ul>
