--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -25,6 +25,8 @@
 				<input class="form-control input-lg" type="password" id="senha">
 				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="submitLogin()" style="margin-top: 30px;">Entrar</button>
 			</div>
+				<h3>Ainda não é cadastrado? Cadastre-se aqui! </h3>
+				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="" style="margin-top: 30px;">Cadastrar</button>
 		</div>
 	</body>
 	<script type="text/javascript">
