página inicial com cadastre-se

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -16,8 +16,9 @@
 			</div>
 		</nav>
 		<div class="container" style="height:calc(100vh - 50px);">
-			<img src="sacolas.jpg" class="img-responsive" alt="compras" >
-			<h3 style="text-align:center; margin:50px;">Grupo de Compras</h3>
+
+				<h3 style="text-align:center; margin:50px;">Grupo de Compras</h3>
+
 			<div>
 				<h2>Login</h2>
 				<input class="form-control input-lg" type="text" id="login">
@@ -25,8 +26,11 @@
 				<input class="form-control input-lg" type="password" id="senha">
 				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="submitLogin()" style="margin-top: 30px;">Entrar</button>
 			</div>
-				<h3>Ainda não é cadastrado? Cadastre-se aqui! </h3>
-				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="" style="margin-top: 30px;">Cadastrar</button>
+			<br>
+			<div>
+				<h5 style="text-align:center"> Ainda não é cadastrado? Cadastre-se aqui! </h5>
+				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="" style="margin-top: 20px;">Cadastrar</button>
+			</div>
 		</div>
 	</body>
 	<script type="text/javascript">
