--- a/app/src/main/assets/ListaDeCompras.html
+++ b/app/src/main/assets/ListaDeCompras.html
@@ -22,7 +22,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="map.html">Home<span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="map.html">Home</a></li>
             </ul>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="map.html">Cadastra Lista<span class="sr-only">(current)</span></a></li>
@@ -38,13 +38,18 @@
 
     </body>
     <form action="ListaDeCompras.html" method="post">
+        <h2>Selecione ou Crie sua Lista</h2>
         <select>
-            <h1>Selecione a Lista</h1>
             <option value="lista1">Lista Mercado</option>
             <option value="lista2">Lista Padaria</option>
-            <option value="lista3">Lista 3</option>
-            <option value="lista4">Lista 4</option>
+            <option value="lista3">Lista Lanchonete</option>
+            <option value="lista4">Lista Farmacia</option>
         </select>
+        <h1></h1>
+        <div>
+            <label for="lista">Nome da Lista:</label>
+            <input type="lista" id="lista" />
+        </div>
         <h1></h1>
         <div>
             <label for="name">Nome do Produto:</label>
@@ -66,8 +71,8 @@
             <input type="preco" id="preco" />
         </div>
         <h1></h1>
-        <div class="button">
-            <button type="submit">Adicionar na Lista</button>
+        <div class="button" onclick="alert('Item salvo')">
+            <button type="submit">Adicionar na Lista </button>
         </div>
     </form>
 
