atualização nos cadastros

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -16,24 +16,20 @@
 			</div>
 		</nav>
 		<div class="container" style="height:calc(100vh - 50px);">
-<<<<<<< HEAD
 
 				<h3 style="text-align:center; margin:50px;">Grupo de Compras</h3>
 
-=======
-			<h1 style="text-align:center; margin:50px;">CompreBook</h1>
->>>>>>> afca6eb41d7900f4765cef28b2b8153e2f0789ce
 			<div>
-				<h2>Login</h2>
+				<h3>Login</h3>
 				<input class="form-control input-lg" type="text" id="login">
-				<h2>Senha</h2>
+				<h3>Senha</h3>
 				<input class="form-control input-lg" type="password" id="senha">
 				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="submitLogin()" style="margin-top: 30px;">Entrar</button>
 			</div>
 			<br>
 			<div>
 				<h5 style="text-align:center"> Ainda não é cadastrado? Cadastre-se aqui! </h5>
-				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="" style="margin-top: 20px;">Cadastrar</button>
+				<button class="btn  btn-lg btn-block" type="button" style="margin-top: 20px;"><a href="cadastro.html">Cadastrar</a></button>
 			</div>
 		</div>
 	</body>
