--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -16,20 +16,14 @@
 			</div>
 		</nav>
 		<div class="container" style="height:calc(100vh - 50px);">
-<<<<<<< HEAD
 
 				<h3 style="text-align:center; margin:50px;">Grupo de Compras</h3>
 
 			<div>
 				<h3>Login</h3>
-=======
-		<h3 style="text-align:center; margin:50px;">Grupo de Compras</h3>
-		<div>
-				<h2>Login</h2>
->>>>>>> 0d9e45664332cc3b4e6e04361941b5caf5049720
-				<input class="form-control input-lg" type="text" id="login">
-				<h3>Senha</h3>
-				<input class="form-control input-lg" type="password" id="senha">
+				<input class="form-control input-lg" type="text" id="login" placeholder="E-mail">
+				<br>
+				<input class="form-control input-lg" type="password" id="senha" placeholder="Senha">
 				<button class="btn btn-primary btn-lg btn-block" type="button" onclick="submitLogin()" style="margin-top: 30px;">Entrar</button>
 			</div>
 			<br>
