--- a/app/src/main/assets/map.html
+++ b/app/src/main/assets/map.html
@@ -26,6 +26,9 @@
 					<ul class="nav navbar-nav">
 						<li class="active"><a href="ListaDeCompras.html">Cadastra Lista</a></li>
 					</ul>
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="perfil.html">Perfil</a></li>
+					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="index.html">Sair</a></li>
 					</ul>
