--- a/app/src/main/assets/cadastrosucesso.html
+++ b/app/src/main/assets/cadastrosucesso.html
@@ -17,22 +17,7 @@
 		</nav>
 		<div class="container" style="height:calc(100vh - 50px);">
 
-			<h3>Perfil</h3>
-			<div>
-			 <div>
-			  <img src="perfil.jpg" class=" thumbnail img-responsive img-left" alt="Imagem como Thumbnail">
-  		      <p class="caption">Nome Completo</p>
-  		      <p class="caption">Rua: Nome da Rua</p>
-  		      <p class="caption">Bairro: Nome do Bairro</p>
-  		      <p class="caption">Cidade: Nome da Cidade</p>
-  		      <p class="caption">Estado: Nome do Estado</p>
-
-  		      <p class="caption">Avaliação:
-  		      	<img src="..." class="img-responsive" alt="...">
-  		      </p>
-
-			 </div>
-			</div>
+			<h3>Cadastro feito com sucesso!</h3>
 			</div>
 		</div>
 	</body>
