--- a/app/src/main/assets/cadastrousuario.html
+++ b/app/src/main/assets/cadastrousuario.html
@@ -55,7 +55,7 @@
 			    <input type="password" class="form-control" id="pwd" placeholder="Confirme a senha">
 			  </div>
 
-			  <button type="submit" class="btn btn-default">Enviar</button>
+			  <button type="submit" class="btn btn-default"><a href="cadastrosucesso.html">Enviar</a></button>
 			</form>
 
 		</div>
