--- a/app/src/main/assets/perfil.html
+++ b/app/src/main/assets/perfil.html
@@ -21,15 +21,21 @@
 			<div>
 			 <div>
 			  <img src="perfil.jpg" class=" thumbnail img-responsive img-left" alt="Imagem como Thumbnail">
-  		      <p class="caption">Nome Completo</p>
-  		      <p class="caption">Rua: Nome da Rua</p>
-  		      <p class="caption">Bairro: Nome do Bairro</p>
-  		      <p class="caption">Cidade: Nome da Cidade</p>
-  		      <p class="caption">Estado: Nome do Estado</p>
+  		      <p class="caption">Thiago Cardoso</p>
+  		      <p class="caption">Rua: Av. Olegario Marciel</p>
+  		      <p class="caption">Bairro: Paineiras</p>
+  		      <p class="caption">Cidade: Juiz de Fora</p>
+  		      <p class="caption">Estado: Minas Gerais</p>
 
-  		      <p class="caption">Avaliação:
-  		      	<img src="..." class="img-responsive" alt="...">
-  		      </p>
+  		      <p class="caption">Avaliação:</p>
+  		      	<div >
+	  		      	<img style="display: inline-block;" src="star.png" class="img-responsive" alt="...">
+	  		      	<img style="display: inline-block;" src="star.png" class="img-responsive" alt="...">
+	  		      	<img style="display: inline-block;" src="star.png" class="img-responsive" alt="...">
+	  		      	<img style="display: inline-block;" src="star.png" class="img-responsive" alt="...">
+	  		      	<img style="display: inline-block;" src="star.png" class="img-responsive" alt="...">
+  		      	</div>
+  		      
 
 			 </div>
 			</div>
