--- a/app/src/main/assets/editarLista.html
+++ b/app/src/main/assets/editarLista.html
@@ -69,7 +69,7 @@
                     <label>Preço (aproximado):</label>
                     <input class="form-control" type="number" id="preco" name="preco" value="10"  >
                 </div>
-                <h2 align="center">Selecione o produto</h2>
+                <h2 align="center">Status Compra</h2>
                 <div class="form-group">
                     <select class="form-control">
                         <option value="produto1">Comprado</option>
