Historico de compras

--- a/app/src/main/assets/cadastroestabelecimento.html
+++ b/app/src/main/assets/cadastroestabelecimento.html
@@ -53,6 +53,7 @@
 			  </div>
 
 			  <button type="submit" class="btn btn-default"><a href="cadastrosucesso.html">Enviar</a></button>
+			  <button type="submit" class="btn btn-default"><a href="index.html">Voltar</a></button>
 			</form>
 
 		</div>
