--- a/app/src/main/assets/map.html
+++ b/app/src/main/assets/map.html
@@ -25,6 +25,7 @@
 						<li><a href="ListaDeCompras.html">Cadastra Lista</a></li>
 						<li class="active"><a href="ListaDeCompras.html">Lista de Compras</a></li>
 						<li class="active"><a href="perfil.html">Perfil</a></li>
+						<li class="active"><a href="historico.html">Histórico de compras</a></li>
 						<li><a href="index.html">Sair</a></li>
 					</ul>
 				</div>
