Ajuste de botões e correções dos menus

--- a/app/src/main/assets/AddListaDeCompras.html
+++ b/app/src/main/assets/AddListaDeCompras.html
@@ -22,12 +22,9 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="map.html">Home</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="ListaDeCompras.html">Lista de Compras<span class="sr-only">(current)</span></a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="map.html">Home</a></li>
+                        <li><a href="perfil.html">Perfil</a></li>
+                        <li class="active"><a href="ListaDeCompras.html">Lista de Compras</a></li>
                         <li><a href="index.html">Sair</a></li>
                     </ul>
                 </div>
