--- a/app/src/main/assets/cadastrousuario.html
+++ b/app/src/main/assets/cadastrousuario.html
@@ -11,7 +11,8 @@
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
-					<a class="navbar-brand" href="map.html">Engenharia de Software</a>
+					<a class="navbar-brand" href="index
+					.html">Engenharia de Software</a>
 				</div>
 			</div>
 		</nav>
