--- a/app/src/main/assets/map.html
+++ b/app/src/main/assets/map.html
@@ -23,8 +23,8 @@
 					<ul class="nav navbar-nav">
 						<li><a href="map.html">Home</a></li>
 						<li><a href="ListaDeCompras.html">Cadastra Lista</a></li>
-						<li class="active"><a href="ListaDeCompras.html">Lista de Compras</a></li>
-						<li class="active"><a href="perfil.html">Perfil</a></li>
+						<li><a href="ListaDeCompras.html">Lista de Compras</a></li>
+						<li><a href="perfil.html">Perfil</a></li>
 						<li><a href="index.html">Sair</a></li>
 					</ul>
 				</div>
@@ -35,19 +35,10 @@
 		<button class="btn btn-success btn-lg" style="position:absolute; z-index:2; bottom:40px; left:calc(50% - 82.05px);" onclick="placesSearch()">Locais próximos</button>
 	</body>
 	<script type="text/javascript">
-
 		var placesSearch = function(){
 			$( location ).attr("href", "places.html");
 		}
 
-
-	    /*function initMap() {
-		    var mapDiv = document.getElementById('map');
-	        var map = new google.maps.Map(mapDiv, {
-	            center: {lat: -21.776751, lng: -43.371710},
-    	        zoom: 8
-        	});
-		}*/
 		function initMap() {
 			if (navigator.geolocation) {
 				var mapcanvas = document.createElement('div');
@@ -58,8 +49,6 @@
 				document.getElementById('map').appendChild(mapcanvas);
 
 				var coords = new google.maps.LatLng(-21.776751, -43.371710);
-
-
 				var options = {
 					zoom: 16,
 					center: coords,
