--- a/app/src/main/assets/compras.html
+++ b/app/src/main/assets/compras.html
@@ -11,7 +11,24 @@
 		<nav class="navbar navbar-default navbar-static-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
 					<a class="navbar-brand" href="map.html">Engenharia de Software</a>
+				</div>
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav">
+						<li><a href="map.html">Home</a></li>
+						<li class="active"><a href="perfil.html">Perfil</a></li>
+						<li><a href="ListaDeCompras.html">Lista de Compras</a></li>
+						<li><a href="fiendes.html">Amigos</a></li>
+						<li><a href="historico.html">Histórico de compras</a></li>
+						<li><a href="index.html">Sair</a></li>
+					</ul>
 				</div>
 			</div>
 		</nav>
