--- a/app/src/main/assets/perfil.html
+++ b/app/src/main/assets/perfil.html
@@ -22,8 +22,8 @@
 			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				<ul class="nav navbar-nav">
 					<li><a href="map.html">Home</a></li>
-					<li><a href="perfil.html">Perfil</a></li>
-					<li class="active"><a href="ListaDeCompras.html">Lista de Compras</a></li>
+					<li class="active"><a href="perfil.html">Perfil</a></li>
+					<li><a href="ListaDeCompras.html">Lista de Compras</a></li>
 					<li><a href="fiendes.html">Amigos</a></li>
 					<li><a href="historico.html">Histórico de compras</a></li>
 					<li><a href="index.html">Sair</a></li>
