Ajuste do menus

--- a/app/src/main/assets/ListaDeCompras.html
+++ b/app/src/main/assets/ListaDeCompras.html
@@ -25,7 +25,7 @@
                         <li><a href="map.html">Home</a></li>
                         <li><a href="perfil.html">Perfil</a></li>
                         <li class="active"><a href="ListaDeCompras.html">Lista de Compras</a></li>
-                        <li><a href="fiendes.html">Amigos</a></li>
+                        <li><a href="fiends.html">Amigos</a></li>
                         <li><a href="historico.html">Histórico de compras</a></li>
                         <li><a href="index.html">Sair</a></li>
                     </ul>
