visualização de perfis diferente

--- a/app/src/main/assets/friends.html
+++ b/app/src/main/assets/friends.html
@@ -32,10 +32,28 @@
 				</div>
 			</div>
 		</nav>
-		<div id="users">
-			<div id="user-sing" style="width:400px;height:300px;backgorund-color:yellow;color:blue">teste</div>
-			<div id="user-sing" style="width:400px;height:300px;backgorund-color:yellow;color:blue">teste</div>
-		</div>
-	</body>
+			<div class="row">
+  			<div class="col-sm-8 col-md-4">
+    		<div class="thumbnail" style>
+     			<img src="perfil.jpg" class=" thumbnail img-responsive img-left" alt="Imagem como Thumbnail">
+      			<div class="caption">
+        		<h3>Thiago Cardoso</h3>
+  				<p class="caption">Cidade: Juiz de Fora</p>
+  				<p class="caption">Estado: Minas Gerais</p>
+        		<p><a href="#" class="btn btn-primary" role="button">Visitar Perfil</a> <a href="#" class="btn btn-default" role="button">Adicionar</a></p>
+      		</div>
+      		</div></div>
+      		<div class="row">
+  			<div class="col-sm-8 col-md-4">
+      		<div class="thumbnail">
+      			<img src="perfil2.jpg" class=" thumbnail img-responsive img-left" alt="Imagem como Thumbnail">
+      			<div class="caption">
+       			<h3>Isaias Kleberson</h3>
+  				<p class="caption">Cidade: Juiz de Fora</p>
+  				<p class="caption">Estado: Minas Gerais</p>
+        		<p><a href="#" class="btn btn-primary" role="button">Visitar Perfil</a> <a href="#" class="btn btn-default" role="button">Adicionar</a></p>
+      		</div>
+      		</div>
 
+	</body>
 </html>
